--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,15 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Assets/Prefabs/Work Desk.prefab.meta
+Assets/Prefabs/Work Desk.prefab
+Assets/Prefabs/Television.prefab.meta
+Assets/Prefabs/Television.prefab
+Assets/Prefabs/Shower.prefab.meta
+Assets/Prefabs/Shower.prefab
+Assets/Prefabs/Plant.prefab.meta
+Assets/Prefabs/Plant.prefab
+Assets/Prefabs/GameLose.prefab.meta
+Assets/Prefabs/GameLose.prefab
+Assets/Prefabs/Chair.prefab.meta
+Assets/Prefabs/Chair.prefab
